2010-11-11  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.

	* clutter-gtk/src/viewport.[hg|ccg]: Remove Viewport, because it was removed
	from the C API. We need to wrap the new stuff, such as GtkClutterActor.

2010-11-11  Murray Cumming  <murrayc@murrayc.com>

	Use clutter-gtk-1.0 and gtkmm-3.0.

	* configure.ac: Try to use the latest versions. This doesn't build yet
	though.

2010-09-29  Chris Kühl  <chrisk@openismus.com>

	Added const version of Clutter::Gtk::Embed::get_stage()

	* clutter-gtk/src/embed.hg: added const version of get_stage()

0.9.6:

2010-05-05  Murray Cumming  <murrayc@murrayc.com>

	Updated for latest clutter-gtk.

	* configure.ac: Depend on latest clutter-gtk and cluttermm.
	* clutter-gtk/src/clutter-gtk_methods.defs: Regenerated.
	* clutter-gtk/src/embed.hg: Now derives from Gtk::Container, since it has
	changed in clutter-gtk.
	* clutter-gtk/clutter-gtkmm.h: Improved main page text.
	* clutter-gtk/clutter-gtkmm.pc.in: Corrected htmlrefpub.

2010-05-05  Murray Cumming  <murrayc@murrayc.com>

	Viewport: Correct the constructor.

	* clutter-gtk/src/viewport.hg: Constructor and create(): Use the Adjustments
	via pointer, not reference, allowing default values of 0. Added properties.
	This also seems to fix the constructor to really use the properties.
	Added class documentation based on the C docs.

2010-05-05  Murray Cumming  <murrayc@murrayc.com>

	Updated for latest clutter-gtk.

	* configure.ac: Depend on latest clutter-gtk and cluttermm.
	* clutter-gtk/src/clutter-gtk_methods.defs: Regenerated.
	* clutter-gtk/src/embed.hg: Now derives from Gtk::Container, since it has
	changed in clutter-gtk.
	* clutter-gtk/clutter-gtkmm.h: Improved main page text.
	* clutter-gtk/clutter-gtkmm.pc.in: Corrected htmlrefpub.

2010-04-28  David King  <davidk@openismus.com>

	Add main page to Doxygen documentation

	* doc/Makefile.am: Parse clutter-gtk/clutter-gtkmm.h for documentation.